--- a/WebRoot/WEB-INF/classes/config/jdbc.properties
+++ b/WebRoot/WEB-INF/classes/config/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/shopcenterdb?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false
 jdbc.username=root
-jdbc.password=root
+jdbc.password=123456
 jdbc.initialSize=50
 jdbc.maxActive=100
 jdbc.filters=stat
