--- a/WebRoot/WEB-INF/classes/.gitignore
+++ b/WebRoot/WEB-INF/classes/.gitignore
@@ -1,13 +1,3 @@
 /com
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-/config
-=======
->>>>>>> tommy
->>>>>>> master
-=======
-/config
-
->>>>>>> master
+/map
+/mapper
