--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,31 @@
-*.class
+/build/
+
+*.DS_Store
+
+*.idea
+
+*.project
+
+*.[oa]
+
+/.settings/
+
+*/.settings/
+
+*/.metadata/
+
 *.classpath
-rebel.xml
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+*~
 
-# Package Files #
-*.jar
-*.war
-*.ear
+META-INF/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+.name
 
-# Project settings
-.project
-.classpath
-.springBeans
-.settings/
-bin/
-target
-\target\
+*target/
+
+*/.idea/
 
 *.iml
-.idea/
-.externalToolBuilders/
-.mymetadata
-.myumldata
 
-# Project Logs
-logs/
-*.classpath
+*jdbc.properties
