--- a/WebRoot/WEB-INF/classes/.gitignore
+++ b/WebRoot/WEB-INF/classes/.gitignore
@@ -1,32 +1,2 @@
-/build/
-
-*.DS_Store
-
-*.idea
-
-*.project
-
-*.[oa]
-
-/.settings/
-
-*/.settings/
-
-*/.metadata/
-
-*.classpath
-
-*~
-
-META-INF/
-
-.name
-
-*target/
-
-*/.idea/
-
-*.iml
-
-*jdbc.properties
-/mapper
+/shoppingcar
+/com
