--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,31 @@
+/build/
 
-*.class
-.classpath
-rebel.xml
+*.DS_Store
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+*.idea
 
-# Package Files #
-*.jar
-*.war
-*.ear
+*.project
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+*.[oa]
 
-# Project settings
-.project
-.classpath
-.springBeans
-.settings/
-bin/
-target
-\target\
+/.settings/
+
+*/.settings/
+
+*/.metadata/
+
+*.classpath
+
+*~
+
+META-INF/
+
+.name
+
+*target/
+
+*/.idea/
 
 *.iml
-.idea/
-.externalToolBuilders/
-.mymetadata
-.myumldata
 
-# Project Logs
-logs/
+*jdbc.properties
