--- a/src/main/resources/config/jdbc.properties
+++ b/src/main/resources/config/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/shopcenterdb?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false
+jdbc.url=jdbc:mysql://localhost:3306/shopcenter?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false
 jdbc.username=root
 jdbc.password=root
 jdbc.initialSize=50
