--- a/.classpath
+++ b/.classpath
@@ -13,7 +13,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/My Library"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/shopcenterlib"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/shopcenter lib"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
